# kafka_replica

./: README.md  main.py  pyproject.toml
backend/app/broker/: broker.py  message.py  partition.py  topic.py
backend/app/consumer/: consumer.py  consumer_interface.py
backend/app/partitioner/: hash_partitioner.py  partitioner.py  round_robin_partitioner.py
backend/app/producer/: producer.py
backend/app/segment/: segment.py
backend/app/storage/: log_manager.py  log_store.py  partition_log.py  segment.py  topic_store.py
data/: topic_metadata.json
data/test-topic/: topic_metadata.json
